criação de combos em Pedido / Itens de Pedido

--- a/app/views/itens_pedido/_form.html.erb
+++ b/app/views/itens_pedido/_form.html.erb
@@ -8,7 +8,7 @@
   <div class="form-group">
     <%= f.label :produto_id, :class => 'control-label col-md-2' %>
     <div class="col-md-10">
-      <%= f.text_field :produto_id, :class => 'text_field form-control' %>
+    <%= f.collection_select(:produto_id, Produto.all.ativos,:id,:descricao,{},{class: 'text_field form-control'} ) %>
     </div>
   </div>
   <div class="form-group">
