--- a/app/views/pedidos/_form.html.erb
+++ b/app/views/pedidos/_form.html.erb
@@ -32,7 +32,7 @@
   <div class="form-group">
     <%= f.label :situacao, :class => 'control-label col-md-2' %>
     <div class="col-md-10">
-      <%= f.text_field :situacao, :class => 'text_field form-control' %>
+    <%= f.select(:situacao, Pedido.situacoes,{},{class: 'text_field form-control'} ) %>
     </div>
   </div>
   <div class="form-group">
