--- a/app/views/vendedores/edit.html.erb
+++ b/app/views/vendedores/edit.html.erb
@@ -1,6 +1,5 @@
-<%- model_class = Fornecedor -%>
+<%- model_class = Vendedor -%>
 <div class="page-header">
   <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
-<%= render :partial => 'form'%>
-
+<%= render :partial => 'form' %>
