--- a/app/views/pessoas_fisicas/_pessoa_fisica.html.erb
+++ b/app/views/pessoas_fisicas/_pessoa_fisica.html.erb
@@ -1,5 +1,11 @@
 <%= fields_for :pessoa_attributes, pessoa_fisica do |f| %>  
   <div class="form-group">
+    <%= f.label :type, :class => 'control-label col-md-2' %>
+    <div class="col-md-10">
+      <%= f.select(:type, options_for_select({ "Pessoa Física" => "PessoaFisica", "Pessoa Jurídica" => "PessoaJuridica" }), {}, {class: "form-control"}) %>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :nome, :class => 'control-label col-md-2' %>
     <div class="col-md-10">
       <%= f.text_field :nome, :class => 'text_field form-control' %>
