--- a/app/views/pessoas_fisicas/_pessoa_fisica.html.erb
+++ b/app/views/pessoas_fisicas/_pessoa_fisica.html.erb
@@ -1,8 +1,9 @@
 <%= fields_for :pessoa_attributes, pessoa_fisica do |f| %>  
   <div class="form-group">
     <%= f.label :type, :class => 'control-label col-md-2' %>
+    <%= f.hidden_field :id %>
     <div class="col-md-10">
-      <%= f.select(:type, options_for_select({ "Pessoa Física" => "PessoaFisica", "Pessoa Jurídica" => "PessoaJuridica" }), {}, {class: "form-control"}) %>
+      <%= f.select(:type, { "Pessoa Física" => "PessoaFisica", "Pessoa Jurídica" => "PessoaJuridica" }, {}, {class: "form-control"}) %> 
     </div>
   </div>
   <div class="form-group">
