--- a/app/views/pessoas_juridicas/_pessoa_juridica.html.erb
+++ b/app/views/pessoas_juridicas/_pessoa_juridica.html.erb
@@ -2,8 +2,9 @@
 
   <div class="form-group">
     <%= f.label :type, :class => 'control-label col-md-2' %>
+    <%= f.hidden_field :id %>
     <div class="col-md-10">
-      <%= f.select(:type, options_for_select({ "Pessoa Física" => "PessoaFisica", "Pessoa Jurídica" => "PessoaJuridica" }), {}, {class: "form-control"}) %>
+      <%= f.select(:type, { "Pessoa Física" => "PessoaFisica", "Pessoa Jurídica" => "PessoaJuridica" }, {}, {class: "form-control"}) %>
     </div>
   </div>
   <div class="form-group">
