Validações dos campos nome e cpf/cnpj de pessoas, utilização da classe BootstrapFormBuilder, replace nos labels

--- a/app/views/itens_pedido/_form.html.erb
+++ b/app/views/itens_pedido/_form.html.erb
@@ -1,39 +1,29 @@
 <%= form_for @item_pedido, :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="form-group">
-    <%= f.label :pedido_id, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :pedido_id, :class => 'text_field form-control' %>
+  <div class="col-md-10">
+    <%= f.text_field :pedido_id, :class => 'text_field form-control' %>
+  </div>
+
+  <div class="col-md-10">
+    <div class="form-group">
+      <%= f.label :produto_id, :class => 'control-label' %>
+     <%= f.collection_select(:produto_id, Produto.all.ativos,:id,:descricao,{},{class: 'text_field form-control'} ) %>
     </div>
   </div>
-  <div class="form-group">
-    <%= f.label :produto_id, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-    <%= f.collection_select(:produto_id, Produto.all.ativos,:id,:descricao,{},{class: 'text_field form-control'} ) %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :quantidade, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :quantidade, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :quantidade, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :percentual_desconto, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :percentual_desconto, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :percentual_desconto, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :valor_decimal, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :valor_decimal, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :valor_decimal, :class => 'text_field form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :valor_unitario, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :valor_unitario, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :valor_unitario, :class => 'text_field form-control' %>
   </div>
 
   <div class="form-group">
