--- a/app/views/fornecedores/_form.html.erb
+++ b/app/views/fornecedores/_form.html.erb
@@ -1,21 +1,30 @@
 <%= form_for @fornecedor, :html => { :class => 'form-horizontal' } do |f| %>
 
+  <div class="col-md-12">
+   <% if @fornecedor.errors.any? %>
+    <div class="alert alert-danger">
+      <h2>Existem <%= pluralize(@fornecedor.errors.count, "erro") %> no formulário:</h2>
+      <ul>
+      <% @fornecedor.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+   <% end %>
+  </div>
+
   <%= render @fornecedor.pessoa %> 
-  
-  <div class="form-group">   
-    <%= f.hidden_field :id %>
-    <%= f.hidden_field :pessoa_id %>
-    <%= f.label :situacao, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :situacao, :class => 'text_field form-control' %>
-    </div>
+
+  <%= f.hidden_field :id %>
+  <%= f.hidden_field :pessoa_id %>
+  <div class="col-md-10">
+    <%= f.text_field :situacao, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :observacoes, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :observacoes, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :observacoes, :class => 'text_field form-control' %>
   </div>
+
   <div class="form-group">
     <div class='col-md-offset-2 col-md-10'>
       <%= f.submit nil, :class => 'btn btn-primary' %>
