--- a/app/views/pessoas_juridicas/_pessoa_juridica.html.erb
+++ b/app/views/pessoas_juridicas/_pessoa_juridica.html.erb
@@ -1,46 +1,33 @@
 <%= fields_for :pessoa_attributes, pessoa_juridica do |f| %> 
 
-  <div class="form-group">
-    <%= f.label :type, :class => 'control-label col-md-2' %>
-    <%= f.hidden_field :id %>
-    <div class="col-md-10">
+  <%= f.hidden_field :id %>
+  <div class="col-md-10">
+    <div class="form-group">
+      <%= f.label :type, :class => 'control-label' %>
       <%= f.select(:type, { "Pessoa Física" => "PessoaFisica", "Pessoa Jurídica" => "PessoaJuridica" }, {}, {class: "form-control"}) %>
     </div>
   </div>
-  <div class="form-group">
-    <%= f.label :cpf_cnpj, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :cpf_cnpj, :class => 'text_field form-control' %>
-    </div>
+  <div class="col-md-10">
+    <%= f.text_field :cpf_cnpj %>
   </div>
-  <div class="form-group">
-    <%= f.label :razao_social, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :razao_social, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :razao_social, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :nome_fantasia, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :nome_fantasia, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :nome_fantasia, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :inscricao_estadual, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :inscricao_estadual, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :inscricao_estadual, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :inscricao_municipal, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :inscricao_municipal, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :inscricao_municipal, :class => 'text_field form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :suframa, :class => 'control-label col-md-2' %>
-    <div class="col-md-10">
-      <%= f.text_field :suframa, :class => 'text_field form-control' %>
-    </div>
+
+  <div class="col-md-10">
+    <%= f.text_field :suframa, :class => 'text_field form-control' %>
   </div>
 <% end %>
